--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,12 @@
 <div class="jumbotron">
   <h1><span style="color: blue;">g</span>Shop - internetowy sklep </h1>
   <p>
-    Sprzedaj co chcesz
+    Hmm
   </p>
 </div>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><span style="color: blue; ">g</span>Shop</a>
+  <a class="navbar-brand"  routerLink="/"><span style="color: blue; ">g</span>Shop</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -21,16 +21,16 @@
       </li>
       <li class="nav-item"
           routerLinkActive="active">
-        <a class="nav-link" href="/account" routerLink="/sprzedaz">Sprzedaj</a>
+        <a class="nav-link" routerLink="/sprzedaz">Sprzedaj</a>
       </li>
       <li class="nav-item"
           routerLinkActive="active">
-        <a class="nav-link" href="/account" routerLink="/konto">Twoje Konto</a>
+        <a class="nav-link" routerLink="/konto">Twoje Konto</a>
       </li>
       <li class="nav-item"
           routerLinkActive="active"
       >
-        <a class="nav-link" href="/contact" routerLink="/kontakt">Kontakt</a>
+        <a class="nav-link" routerLink="/kontakt">Kontakt</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
