--- a/src/app/product-list/product-details/product-details.component.html
+++ b/src/app/product-list/product-details/product-details.component.html
@@ -1,40 +1,71 @@
 <div ngModel="product" class="container-fluid border">
-  <br>
-  <div class="container-fluid  border">
-    <div class="float-left">
-      <img  class="img-thumbnail" src="/assets/img/goreit_logo.jpg" alt="Card image cap">
-    </div>
-    <p>{{product.title}}</p>
-    <p><label>cena: </label>{{product.price}} PLN </p>
-    <button class="btn btn-primary" (click)="onOrderBuyClick()">Kup</button>
-    <hr/>
-    <p>{{product.text}}</p>
-    <br>
-  </div>
-  <br>
 
-  <h3> Wasze komentarze</h3>
-  <form (ngSubmit)="onCommentAdd(f)" #f="ngForm">
-    <div class="form-group">
-      <div class="form-check">
-        <label for="text"></label>
-        <textarea type="text"
-                  id="text"
-                  rows="4"
-                  class="form-control"
-                  ngModel
-                  name="text"
-                  required
-                  #comment = "ngModel"></textarea>
-        <button type="submit"
-                class="btn btn-primary"
-                [disabled]="!f.valid" >Dodaj</button>
-        <p *ngIf="!comment.valid && comment.touched"> Please provide a comment</p>
-      </div>
+  <div class="container-fluid mb-3 mt-3 border">
+
+    <div class="d-inline-block m-3">
+      <img class="img-thumbnail" src="/assets/img/goreit_logo.jpg" alt="Card image cap">
     </div>
-  </form>
+
+    <div class="d-inline-block">
+      <p>{{product.title}}</p>
+    </div>
+
+    <div class="d-lg-inline-block border m-1 float-right">
+      <div class="container-sm m-3"> {{product.price}} PLN</div>
+      <form (ngSubmit)="onOrderBuyClick(n)" #n="ngForm">
+        <div class="form-group m-0">
+          <div class="form-check">
+            <label class="text-" for="amount">
+                <small>Liczba sztuk</small>
+            </label>
+            <input type="text"
+                   id="amount"
+                   class="form-control"
+                   ngModel
+                   name="amount"
+                   required
+                   #amount="ngModel"/>
+            <button  type="submit"
+                    class="btn btn-primary mt-1 mb-1"
+                    [disabled]="!n.valid">Kup teraz
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+
+  </div>
+
+  <div class="container-fluid fmb-3 mt-3 border-primary">
+    <p>{{product.text}}</p>
+  </div>
+
+  <div class="container mt-3">
+    <form (ngSubmit)="onCommentAdd(f)" #f="ngForm">
+      <div class="form-group">
+        <div class="form-check">
+          <h3> Wasze komentarze</h3>
+          <label for="text"></label>
+          <textarea type="text"
+                    id="text"
+                    rows="4"
+                    class="form-control"
+                    ngModel
+                    name="text"
+                    required
+                    #text="ngModel"></textarea>
+          <button type="submit"
+                  class="btn btn-primary"
+                  [disabled]="!f.valid">Dodaj
+          </button>
+          <p *ngIf="!text.valid && text.touched"> Please provide a comment</p>
+        </div>
+      </div>
+    </form>
+  </div>
+
+
   <app-comment *ngFor="let comment of product.comments" [userId]="comment.userId" [text]="comment.text"></app-comment>
-  <br>
 
 </div>
 <br>
