--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,12 +1,18 @@
 <div *ngFor="let product of products" class="container-fluid border">
   <br>
-  <div class="container-fluid  border">
-    <a (click)="onTitleClick(product.title)" > <img  class="img-thumbnail" src="/assets/img/goreit_logo.jpg" alt="Card image cap"></a>
-    <a class="btn btn-primary" style="color: white" (click)="onTitleClick(product.title)"> {{product.title}} </a>
-    <label>cena: </label>{{product.price}} PLN
+  <div class="container-fluid border">
+
+    <div class="m-3 d-lg-inline-block">
+      <a (click)="onTitleClick(product.title)"> <img class="btn img-thumbnail" src="/assets/img/goreit_logo.jpg"
+                                                     alt="Card image cap"></a>
+    </div>
+    <div class="d-lg-inline-block">
+      <a class="btn" (click)="onTitleClick(product.title)"><h4> {{product.title}}</h4></a>
+      <p>{{product.price}} PLN</p>
+    </div>
+    <br>
   </div>
   <br>
-</div>
-<br>
-<br>
+  <br>
 
+</div>
