--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,37 @@
-<p>contact works!</p>
+<div class="container-fluid mt-3 border">
+
+  <h2 class="mb-3 mt-3"> Wyślij wiadomość</h2>
+
+  <form (ngSubmit)="onEmailSend(f)" #f="ngForm"
+  >
+    <div class="form-group">
+      <div class="form-group mt-3">
+        <label for="title">Tytuł</label>
+        <input type="title"
+               class="form-control"
+               id="title"
+               ngModel
+               name="title"
+               #title="ngModel"
+               required>
+      </div>
+      <div class="form-group">
+        <label for="text">Treść</label>
+        <textarea
+          class="form-control"
+          id="text"
+          rows="20"
+          cols="50"
+          ngModel
+          name="text"
+          #text="ngModel"
+          required>
+      </textarea>
+      </div>
+      <button type="submit"
+              class="btn btn-primary mt-3 mb-3"
+              [disabled]="!f.valid">Submit
+      </button>
+    </div>
+  </form>
+</div>
