--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,4 +1,7 @@
 <div class="container-fluid mt-3">
+
+  <p [ngModel] >uzytkownik : {{this.username}}</p>
+
   <button type="button" class="btn btn-primary btn-lg btn-block">Moje zamówienia</button>
   <div class="mt-3" *ngFor="let orderResponse of orderResponses">
     <p> <label></label><i> nr zamówienia {{orderResponse.id}}</i></p>
