add category add product by category

--- a/src/app/sell/sell.component.html
+++ b/src/app/sell/sell.component.html
@@ -10,8 +10,8 @@
               ngModel
               name="categoryName"
               #categoryName="ngModel">>
-        <option>MOTO</option>
-        <option>ELEKTRO</option>
+        <option>MOTORYZACJA</option>
+        <option>ELEKTRONIKA</option>
         <option>IT</option>
       </select>
     </div>
