--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -3,7 +3,8 @@
   <p [ngModel] >uzytkownik : {{this.username}}</p>
 
   <button type="button" class="btn btn-primary btn-lg btn-block">Moje zamówienia</button>
-  <div class="mt-3" *ngFor="let orderResponse of orderResponses">
+  <div class="mt-3" *ngFor="let orderResponse of orderResponses  odd as isOdd"
+       [ngStyle]="isOdd?{'background-color': '#D3D3D3'}: {'background-color': 'white'}"  >
     <p> <label></label><i> nr zamówienia {{orderResponse.id}}</i></p>
     <div *ngFor="let orderlineView of orderResponse.orderlineViews">
       <p> {{orderlineView.productTitle}}</p>
