add photo gallery add photo service

--- a/src/app/sell/sell.component.html
+++ b/src/app/sell/sell.component.html
@@ -13,6 +13,8 @@
         <option>MOTORYZACJA</option>
         <option>ELEKTRONIKA</option>
         <option>IT</option>
+        <option>USLUGI</option>
+        <option>DZIECKO</option>
       </select>
     </div>
     <div class="form-group mt-3">
