--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,3 +1,3 @@
-<div (click)="onCategoryClick(category.name)" *ngFor="let category of categories" class="alert alert-secondary">
+<div data-toggle="popover" (click)="onCategoryClick(category.name)" *ngFor="let category of categories" class="alert alert-secondary">
   <p>{{category.name}}</p>
 </div>
