refactor account add sold add bought add link photo gallery fix user login

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,17 +1,8 @@
+
 <div class="container-fluid mt-3">
 
-  <p [ngModel] >uzytkownik : {{this.username}}</p>
+  <a class="btn btn-primary m-3" role="button" routerLink="/konto/kupione"  routerLinkActive="active"> Kupione </a>
+  <a class="btn btn-primary m-3"  role="button"  routerLink="/konto/sprzedane"  routerLinkActive="active"> Sprzedane </a>
+  <a class="btn btn-primary m-3" role="button"   routerLink="/konto/galeria"  routerLinkActive="active">Galeria </a>
 
-  <button type="button" class="btn btn-primary btn-lg btn-block">Moje zamówienia</button>
-  <div class="mt-3" *ngFor="let orderResponse of orderResponses  odd as isOdd"
-       [ngStyle]="isOdd?{'background-color': '#D3D3D3'}: {'background-color': 'white'}"  >
-    <p> <label></label><i> nr zamówienia {{orderResponse.id}}</i></p>
-    <div *ngFor="let orderlineView of orderResponse.orderlineViews">
-      <p> {{orderlineView.productTitle}}</p>
-      <p><label>Cena: </label> {{orderlineView.price}} PLN</p>
-      <p><label>Liczba sztuk: </label> {{orderlineView.amount}}</p>
-      <p><label>W sumie:  </label> {{orderlineView.amount* orderlineView.price}}</p>
-      <hr>
-    </div>
-  </div>
 </div>
