refactor account add sold add bought add link photo gallery fix user login

--- a/src/app/account/bought/bought.component.html
+++ b/src/app/account/bought/bought.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid mt-3">
 
+  <a class="btn btn-primary m-3" role="button" routerLink="/konto/"> Konto </a>
   <a class="btn btn-primary m-3" role="button" routerLink="/konto/kupione"> Kupione </a>
   <a class="btn btn-primary m-3"  role="button"  routerLink="/konto/sprzedane"> Sprzedane </a>
   <a class="btn btn-primary m-3" role="button"   routerLink="/konto/galeria">Galeria </a>
