--- a/src/app/product-list/product-details/product-details.component.html
+++ b/src/app/product-list/product-details/product-details.component.html
@@ -36,7 +36,11 @@
 
   </div>
 
-  <div class="container-fluid fmb-3 mt-3 border-primary">
+  <div class="container-fluid fmb-3 mt-3 p-3 border">
+    <p>Sprzedajacy: {{product.sellerId}}</p>
+  </div>
+
+  <div class="container-fluid fmb-3 mt-3 p-3 border">
     <p>{{product.text}}</p>
   </div>
 
