--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,8 +1,16 @@
 
 <div class="container-fluid mt-3">
 
+
+  <a class="btn btn-primary m-3" role="button" routerLink="/konto/"> Konto </a>
   <a class="btn btn-primary m-3" role="button" routerLink="/konto/kupione"  routerLinkActive="active"> Kupione </a>
   <a class="btn btn-primary m-3"  role="button"  routerLink="/konto/sprzedane"  routerLinkActive="active"> Sprzedane </a>
   <a class="btn btn-primary m-3" role="button"   routerLink="/konto/galeria"  routerLinkActive="active">Galeria </a>
+
+  <div class="container-fluid m-1">
+
+    <p [ngModel] >uzytkownik : {{this.username}}</p>
+
+  </div>
 
 </div>
