--- a/src/app/product-list/product-details/comment/comment.component.html
+++ b/src/app/product-list/product-details/comment/comment.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid border m-3">
+<div class="container border m-3">
   <p> <b>{{userId}}</b> napisał: </p>
   <p> {{text}}</p>
 </div>
