--- a/src/app/product-list/product-details/product-details.component.html
+++ b/src/app/product-list/product-details/product-details.component.html
@@ -1,22 +1,29 @@
 <div ngModel="product" class="container-fluid border">
 
-  <div class="container-fluid mb-3 mt-3 border">
+  <div class="container-fluid p-3 mb-3 mt-3 border">
 
     <div class="d-inline-block m-3">
       <img class="img-thumbnail" src="/assets/img/goreit_logo.jpg" alt="Card image cap">
     </div>
 
     <div class="d-inline-block">
-      <p>{{product.title}}</p>
+      <div>
+        <p><b>{{product.title}}</b></p>
+      </div>
+      <div class="mt-3">
+        <p> Dostepna ilosc: <i>{{product.quantity}}</i></p>
+      </div>
     </div>
+
 
     <div class="d-lg-inline-block border m-1 float-right">
       <div class="container-sm m-3"> {{product.price}} PLN</div>
+      <p class="btn-warning" [hidden]="isLoggedIn()"> Tylko zalogowani uzytkownicy moga dokonywac zakupu </p>
       <form (ngSubmit)="onOrderBuyClick(n)" #n="ngForm">
-        <div class="form-group m-0">
+        <div [hidden]="!isLoggedIn()" class="form-group m-0">
           <div class="form-check">
             <label class="text-" for="amount">
-                <small>Liczba sztuk</small>
+              <small>Liczba sztuk</small>
             </label>
             <input type="text"
                    id="amount"
@@ -25,9 +32,9 @@
                    name="amount"
                    required
                    #amount="ngModel"/>
-            <button  type="submit"
+            <button type="submit"
                     class="btn btn-primary mt-1 mb-1"
-                    [disabled]="!n.valid">Kup teraz
+                    [disabled]="amount.value > product.quantity || amount.value < 1 ">Kup teraz
             </button>
           </div>
         </div>
@@ -40,8 +47,26 @@
     <p>Sprzedajacy: {{product.sellerId}}</p>
   </div>
 
+  <div [hidden]="this.product.boughtByList === undefined" class="container-fluid fmb-3 mt-3 p-3 border">
+    <p>Kupione przez: </p>
+    <div *ngFor=" let user of this.product.boughtByList">
+      <p class="text-primary">{{user}}</p>
+    </div>
+  </div>
+
+
   <div class="container-fluid fmb-3 mt-3 p-3 border">
     <p>{{product.text}}</p>
+  </div>
+
+
+  <div>
+
+    <div class="alert alert-primary" role="alert">
+      {{product.photoAlbum.name}}
+    </div>
+    <ng-image-slider [animationSpeed]="0.5" [images]="this.imageObjects" #nav></ng-image-slider>
+
   </div>
 
   <div class="container mt-3">
@@ -68,8 +93,8 @@
     </form>
   </div>
 
-
-  <app-comment *ngFor="let comment of product.comments" [userId]="comment.userId" [text]="comment.text"></app-comment>
+  <app-comment class="mt-1 " *ngFor="let comment of product.comments" [userId]="comment.userId"
+               [text]="comment.text"></app-comment>
 
 </div>
 <br>
