--- a/src/app/product-list/product-details/product-details.component.html
+++ b/src/app/product-list/product-details/product-details.component.html
@@ -55,8 +55,7 @@
   </div>
 
 
-  <div class="container-fluid fmb-3 mt-3 p-3 border">
-    <p>{{product.text}}</p>
+  <div [innerHTML]="product.text" class="container-fluid fmb-3 mt-3 p-3 border">
   </div>
 
 
