--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron mt-3">
   <h1><span style="color: blue;">g</span>Shop - internetowy sklep </h1>
   <p>
     Hmm
