add city to message

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -37,6 +37,16 @@
                  #title="ngModel"
                  required>
         </div>
+        <div>
+          <label for="city">Miasto</label>
+          <input type="city"
+                 class="form-control"
+                 id=city
+                 ngModel
+                 name="city"
+                 #title="ngModel"
+                 >
+        </div>
       </div>
         <button type="submit"
                 class="btn btn-primary mt-3 mb-3"
